--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="resume styles.css">
+      <title>Резюме ШСА</title>
+    </head>
+    <body>
+      <div id="header">
+        <h1 class="header-title">Шиловцева София Андреевна</h1>
+        <h2 class="header-title">Фронтенд-разработчик</h2>
+        <p>
+          <a href="shilovtseva.s@gmail.com">E-mail</a>
+          <a href="vk.com">ВКонтакте</a>
+        </p>
+      </div>
+      <div id="main">
+        <p>Я всегда хотела заниматься программированием. Меня очень привлекла профессия фронтенд-разработчика, и я решила обучиться ей самостоятельно. Сейчас я только учусь, но обязательно достигну высот в этой области.</p>
+        <p>Готова учиться новому, работая на удалёнке.</p>
+        <h2>Опыт работы</h2>
+        <h3>Даталидз</h3>
+        <p>Менеджер локализации, <i>август 2022 - настоящее время</i></p>
+        <ul>
+          <li>Организация переводческих проектов</li>
+          <li>Вычитка сайтов</li>
+          <li>Взаимодействие с исполнителями, в том числе на английском языке</li>
+          <li>Редактура и корректура английского в контенте сайтов</li>
+        </ul>
+        <h2>Образование</h2>
+        <h3>МИСИС</h3>
+        <p>Бакалавриат, Лингвистика (Перевод и переводоведение), <i>2018-2022</i></p>
+        <h2>Другие навыки и увлечения</h2>
+        <ul>
+          <li>Фотография</li>
+          <li>Любительская игра на гитаре</li>
+          <li>Чтение книг</li>
+        </ul>
+      </div>
+      <div id="footer">
+        <p>София Шиловцева</p>
+        <p>Мой адрес, Россия, Мой телефон, <a href="shilovtseva.s@gmail.com">shilovtseva.s@gmail.com</a></p>
+      </div>
+    </body>
+  </html>
