--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="resume styles.css">
+      <link rel="stylesheet" href="index.css">
       <title>Резюме ШСА</title>
     </head>
     <body>
