--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
       <div id="header">
-        <h1 class="header-title">Шиловцева София Андреевна</h1>
+        <h1 class="header-title">ШСА</h1>
         <h2 class="header-title">Фронтенд-разработчик</h2>
         <p>
-          <a href="shilovtseva.s@gmail.com">E-mail</a>
+          <a href="sh@gmail.com">E-mail</a>
           <a href="vk.com">ВКонтакте</a>
         </p>
       </div>
@@ -37,8 +37,8 @@
         </ul>
       </div>
       <div id="footer">
-        <p>София Шиловцева</p>
-        <p>Мой адрес, Россия, Мой телефон, <a href="shilovtseva.s@gmail.com">shilovtseva.s@gmail.com</a></p>
+        <p>ШСА</p>
+        <p>Мой адрес, Россия, Мой телефон, <a href="sh@gmail.com">sh@gmail.com</a></p>
       </div>
     </body>
   </html>
